# driver-salary-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
app/: __init__.py  config.py  db.py  main.py  models.py  security.py
app/odata/: __init__.py  client.py  sync.py
app/salary/: __init__.py  engine.py  service.py
app/web/: __init__.py  formatting.py  routes.py
app/web/static/: htmx-lite.js  styles.css
app/web/templates/: _driver_days.html  base.html  salary.html  settings.html  syncs.html
docs/: PROJECT_CONTEXT.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_counterparty_fields.py
spreadsheet_build/: build_salary_sheet.mjs
tests/: test_persistence.py  test_salary_engine.py  test_web_formatting.py  test_web_routes.py
