[project]
name = "driver-salary-service"
version = "0.1.0"
description = "Local-first service for driver salary calculation from 1C OData data."
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.110",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
