[metadata]
name = driver-salary-service
version = 0.1.0
description = Local-first service for driver salary calculation from 1C OData data.

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    alembic>=1.13
    fastapi>=0.110
    httpx>=0.27
    jinja2>=3.1
    python-multipart>=0.0.9
    sqlalchemy>=2.0
    uvicorn[standard]>=0.27

[options.packages.find]
include = app*

[options.extras_require]
postgres =
    psycopg[binary]>=3.1
test =
    pytest>=8.0

[options.package_data]
app =
    web/templates/*.html
    web/static/*.css
    web/static/*.js
